Add portrait UI layout.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:padding="24dp"
+    android:paddingTop="40dp"
+    android:weightSum="8">
+
+    <EditText
+        android:id="@+id/editTextField1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:text="Field 1" />
+
+    <EditText
+        android:id="@+id/editTextField2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="1"
+        android:text="Field 2" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <RadioButton
+            android:id="@+id/radioButtonOperation1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Operation 1" />
+
+        <RadioButton
+            android:id="@+id/radioButtonOperation2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Operation 2" />
+
+        <RadioButton
+            android:id="@+id/radioButtonOperation3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Operation 3" />
+
+        <RadioButton
+            android:id="@+id/radioButtonOperation4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Operation 4" />
+
+    </RadioGroup>
+
+    <CheckBox
+        android:id="@+id/checkBoxFloatValues"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Float Values" />
+
+    <CheckBox
+        android:id="@+id/checkBoxSignedValues"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Signed Values" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textViewResultField"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/calculateButton"
+        android:layout_below="@id/checkBoxSignedValues"
+        android:layout_weight="2"
+        android:text="Result Field" />
+
+    <Button
+        android:id="@+id/calculateButton"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_weight="0.5"
+        android:text="Calculate Button" />
+
+</LinearLayout>
