--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/GreenText"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,6 +10,7 @@
 
     <EditText
         android:id="@+id/editTextField1"
+        style="@style/GreenText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -18,6 +20,7 @@
 
     <EditText
         android:id="@+id/editTextField2"
+        style="@style/GreenText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -26,12 +29,14 @@
         android:inputType="number|numberDecimal|numberSigned" />
 
     <RadioGroup
+        style="@style/GreenText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
 
         <RadioButton
             android:id="@+id/radioButtonOperation1_plus"
+            style="@style/GreenText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
@@ -39,6 +44,7 @@
 
         <RadioButton
             android:id="@+id/radioButtonOperation2_minus"
+            style="@style/GreenText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
@@ -46,6 +52,7 @@
 
         <RadioButton
             android:id="@+id/radioButtonOperation3_divide"
+            style="@style/GreenText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
@@ -53,6 +60,7 @@
 
         <RadioButton
             android:id="@+id/radioButtonOperation4_multiply"
+            style="@style/GreenText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
@@ -62,6 +70,7 @@
 
     <CheckBox
         android:id="@+id/checkBoxFloatValues"
+        style="@style/GreenText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -71,6 +80,7 @@
 
     <CheckBox
         android:id="@+id/checkBoxSignedValues"
+        style="@style/GreenText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -80,6 +90,7 @@
 
     <TextView
         android:id="@+id/textViewResultField"
+        style="@style/GreenText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
@@ -87,6 +98,7 @@
 
     <Button
         android:id="@+id/calculateButton"
+        style="@style/GreenText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.5"
